--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -14,10 +14,10 @@
             <p class="lead text-muted">{{ liste.description }}</p>
             <p class="lead text-muted">{{ liste.expiration|date("d/m/Y") }}</p>
             {% if creator == true %}
-                <a href="{{ path_for('formListeAdmin', { 'token': liste.token, 'token_edit': liste.token_edit }) }}" class="btn btn-outline-dark float-right">Administrer</a>
-                <button class="btn btn-outline-dark share-btn float-left" data-toggle="popover"
-                        data-content="Lien copié!" data-placement="bottom" data-trigger="focus">Partager l'objet
-                </button>
+                <div class="btn-group mt-lg-0 mt-md-0 mt-2">
+                    <a href="{{ path_for('formListeAdmin', { 'token': liste.token, 'token_edit': liste.token_edit }) }}" class="btn btn-outline-dark float-right">Administrer</a>
+                    <button class="btn btn-outline-dark share-btn" data-toggle="popover" data-content="Lien copié!" data-placement="bottom" data-trigger="focus">Partager l'objet</button>
+                </div>
             {% endif %}
         </div>
     </section>
