--- a/app/Views/pages/listeAdmin.twig
+++ b/app/Views/pages/listeAdmin.twig
@@ -109,8 +109,7 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer
                                 </button>
-                                <button type="submit" name="action" value="delete" class="btn btn-danger">Supprimer</button>
-                                <button type="submit" name="action" value="edit" class="btn btn-dark">Modifier</button>
+                                <button type="submit" name="action" value="edit" class="btn btn-dark">Ajouter</button>
                             </div>
                         </form>
                     </div>
