gestion image item

--- a/app/Views/pages/item.twig
+++ b/app/Views/pages/item.twig
@@ -23,7 +23,8 @@
     </section>
     <div class="container mt-4">
         <div class="row">
-            <img class="col-sm-4 rounded" style="height: 18rem" src="{{ base_path }}/public/img/{{ item.img }}">
+            <!--<img class="col-sm-4 rounded" style="height: 18rem" src="{{ base_path }}/public/img/{{ item.img }}">-->
+            <img class="col-sm-4 rounded" style="height: 18rem" src="{{ item.img }}">
             <div class="col-sm-8 text-center">
                 <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong></h5>
                 <p>{{ item.descr }}</p>
