--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -28,6 +28,8 @@
             </li>
         </ul>
     </div>
+    <a class="navbar-brand" href="#login"><i class="fas fa-sign-in-alt"></i></a>
+
 </nav>
 <div class="container">
     {% block flash %}{% endblock %}
