ajout page login

--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -28,7 +28,7 @@
             </li>
         </ul>
     </div>
-    <a class="navbar-brand" href="#login"><i class="fas fa-sign-in-alt"></i></a>
+    <a class="navbar-brand" href="{{ path_for('loginPage') }}"><i class="fas fa-sign-in-alt"></i></a>
 
 </nav>
 <div class="container">
