--- a/app/Views/pages/login.twig
+++ b/app/Views/pages/login.twig
@@ -87,27 +87,34 @@
                             <div class="form-group">
                                 <label for="email" class="col-md-3 control-label">Email</label>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control" name="email" placeholder="Email Address">
+                                    <input type="text" class="form-control" name="email" placeholder="Email">
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label for="firstname" class="col-md-3 control-label">Prénom</label>
+                                <label for="pseudo" class="col-md-3 control-label">Pseudo</label>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control" name="firstname" placeholder="Prénom">
+                                    <input type="text" class="form-control" name="pseudo" placeholder="Pseudo">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="prenom" class="col-md-3 control-label">Prénom</label>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control" name="prenom" placeholder="Prénom">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="lastname" class="col-md-3 control-label">Nom</label>
+                                <label for="nom" class="col-md-3 control-label">Nom</label>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control" name="lastname" placeholder="Nom">
+                                    <input type="text" class="form-control" name="nom" placeholder="Nom">
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label for="password" class="col-md-3 control-label">Mot de passe</label>
                                 <div class="col-md-9">
-                                    <input type="password" class="form-control" name="passwd" placeholder="Mot de passe">
+                                    <input type="password" class="form-control" name="password" placeholder="Mot de passe">
                                 </div>
                             </div>
 
@@ -115,7 +122,7 @@
                                 <label for="passwordconfirm" class="col-md-3 control-label">Confirmer mot de
                                     passe</label>
                                 <div class="col-md-9">
-                                    <input type="password" class="form-control" name="passwdConf"
+                                    <input type="password" class="form-control" name="passwordconfirm"
                                            placeholder="Mot de passe">
                                 </div>
                             </div>
