--- a/app/Views/pages/login.twig
+++ b/app/Views/pages/login.twig
@@ -7,136 +7,70 @@
 {% endblock %}
 
 {% block content %}
-        <div>
-            <div id="loginbox" style="margin-top:50px;"
-                 class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <div class="panel-title">Se connecter</div>
-                        <div style="float:right; font-size: 80%; position: relative; top:-10px"><a style="color:whitesmoke" href="#">Mot de passe
-                                oublié?</a></div>
-                    </div>
-
-                    <div style="padding-top:30px" class="panel-body">
-
-                        <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-
-                        <form id="loginform" class="form-horizontal" role="form">
-
-                            <div style="margin-bottom: 25px" class="input-group">
-                                <span class="input-group-addon"><i class="fas fa-user"></i></span>
-                                <input id="login-username" type="text" class="form-control" name="username" value=""
-                                       placeholder="adresse email">
-                            </div>
-
-                            <div style="margin-bottom: 25px" class="input-group">
-                                <span class="input-group-addon"><i class="fas fa-lock"></i></span>
-                                <input id="login-password" type="password" class="form-control" name="password"
-                                       placeholder="mot de passe">
-                            </div>
-
-
-                            <div class="input-group">
-                                <div class="checkbox">
-                                    <label>
-                                        <input id="login-remember" type="checkbox" name="remember" value="1"> Rester
-                                        connecté
-                                    </label>
-                                </div>
-                            </div>
-
-                            <div style="margin-top:10px" class="form-group">
-                                <div class="col-sm-12 controls">
-                                    <a id="btn-login" href="#" class="btn btn-success">Se connecter </a>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-md-12 control">
-                                    <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
-                                        Vous n'avez pas encore de compte?
-                                        <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
-                                            Créer un compte
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+    {% if flash.error is defined %}
+        {% for error in flash.error %}
+            <div class="alert alert-danger alert-dismissible fade show mt-2" role="alert">
+                <strong>Mince!</strong> {{ error | raw }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
+        {% endfor %}
+    {% endif %}
+    {% if flash.success is defined %}
+        {% for success in flash.success %}
+            <div class="alert alert-success alert-dismissible fade show mt-2" role="alert">
+                <strong>Super!</strong> {{ success | raw }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    {% endif %}
+    <div>
+        <div id="loginbox" style="margin-top:50px;"
+             class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <div class="panel-title">Se connecter</div>
+                </div>
 
-            <div id="signupbox" style="display:none; margin-top:50px"  class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <div class="panel-title">Inscription</div>
-                        <div style="float:right; font-size: 85%; position: relative; top:-10px"><a style="color: whitesmoke" id="signinlink"
-                                                                                                   href="#"
-                                                                                                   onclick="$('#signupbox').hide(); $('#loginbox').show()">Se
-                                connecter</a></div>
-                    </div>
-                    <div class="panel-body">
-                        <form id="signupform" class="form-horizontal" role="form">
+                <div style="padding-top:30px" class="panel-body">
 
-                            <div id="signupalert" style="display:none" class="alert alert-danger">
-                                <p>Error:</p>
-                                <span></span>
+                    <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+
+                    <form id="loginform" class="form-horizontal" role="form" method="post" action="{{ path_for("sendLogin") }}" >
+                        <div style="margin-bottom: 25px" class="input-group">
+                            <span class="input-group-addon"><i class="fas fa-user"></i></span>
+                            <input id="login-username" type="text" class="form-control" name="username" value=""
+                                   placeholder="adresse email">
+                        </div>
+
+                        <div style="margin-bottom: 25px" class="input-group">
+                            <span class="input-group-addon"><i class="fas fa-lock"></i></span>
+                            <input id="login-password" type="password" class="form-control" name="password"
+                                   placeholder="mot de passe">
+                        </div>
+
+                        <div style="margin-top:10px" class="form-group">
+                            <div class="col-sm-12 controls">
+                                <a id="btn-login" href="#" class="btn btn-success">Se connecter </a>
                             </div>
+                        </div>
 
-
-                            <div class="form-group">
-                                <label for="email" class="col-md-3 control-label">Email</label>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" name="email" placeholder="Email">
+                        <div class="form-group">
+                            <div class="col-md-12 control">
+                                <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                                    Vous n'avez pas encore de compte?
+                                    <a href="{{ path_for("inscription") }}">
+                                        Créer un compte
+                                    </a>
                                 </div>
                             </div>
-
-                            <div class="form-group">
-                                <label for="pseudo" class="col-md-3 control-label">Pseudo</label>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" name="pseudo" placeholder="Pseudo">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="prenom" class="col-md-3 control-label">Prénom</label>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" name="prenom" placeholder="Prénom">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="nom" class="col-md-3 control-label">Nom</label>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" name="nom" placeholder="Nom">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="password" class="col-md-3 control-label">Mot de passe</label>
-                                <div class="col-md-9">
-                                    <input type="password" class="form-control" name="password" placeholder="Mot de passe">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="passwordconfirm" class="col-md-3 control-label">Confirmer mot de
-                                    passe</label>
-                                <div class="col-md-9">
-                                    <input type="password" class="form-control" name="passwordconfirm"
-                                           placeholder="Mot de passe">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-md-offset-3 col-md-9">
-                                    <button id="btn-signup" type="button" class="btn btn-info"><i
-                                                class="icon-hand-right"></i>S'inscrire
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
+    </div>
 {% endblock %}
