--- a/app/Views/pages/createListe.twig
+++ b/app/Views/pages/createListe.twig
@@ -16,6 +16,12 @@
                 <label for="expiration">Expiration</label>
                 <input class="form-control" type="date" id="expiration" name="expiration" value="" required>
             </div>
+            <div class="form-group">
+                <div class="custom-checkbox custom-control">
+                    <input type="checkbox" name="public" id="public" class="custom-control-input">
+                    <label for="public" class="custom-control-label">Rendre la liste publique</label>
+                </div>
+            </div>
             <button type="Submit" class="btn btn-dark">Créer</button>
         </form>
     </div>
