--- a/app/Views/pages/liste.twig
+++ b/app/Views/pages/liste.twig
@@ -58,6 +58,7 @@
         {% for item in items %}
             <div class="p-2 bd-highlight">
                 <div class="card" style="width: 18rem">
+                    <!-- <img src="{{ base_path }}/public/img/{{ item.img }}" class="card-img-top rounded-top" alt="{{ item.img }}"> -->
                     <img src="{{ item.img }}" class="card-img-top rounded-top" alt="{{ item.img }}">
                     <div class="card-body text-center">
                         <h5 class="text-uppercase font-weight-bold m-auto text-center"><strong>{{ item.nom }}</strong>
@@ -121,7 +122,7 @@
             try {
                 document.execCommand('copy');
             } catch (err) {
-                console.error('Oups, impossible de copier', err);
+                console.error('Fallback: Oops, unable to copy', err);
             }
 
             document.body.removeChild(textArea);
