--- a/app/Views/pages/home.twig
+++ b/app/Views/pages/home.twig
@@ -25,7 +25,7 @@
 {% block content %}
     <div class="jumbotron my-2">
         <h1 class="display-4">Bienvenue!</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque metus magna, egestas quis tortor sed, imperdiet sodales diam. Suspendisse odio massa, tristique sed felis id, volutpat sagittis felis. Etiam quis feugiat metus. Vivamus eu maximus nibh. Nulla laoreet porttitor felis id semper. Mauris quis libero sit amet tellus cursus tristique. Nunc dignissim urna non erat ullamcorper mattis. </p>
+        <p class="lead">Charl-Wishlist est un espace sur lequel vous pouvez exprimer toutes vos envies pour ensuite les partager avec ceux que vous aimez. Et si vous êtes en manque d’inspiration pour offrir un cadeau à un ami, vous pourrez également consulter sa liste et ainsi combler ses attentes.</p>
     </div>
 
     {% if listes is not empty %}
